// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateProfile should render 1`] = `
<DocumentFragment>
  <div
    class="bg-theme-neutral-contrast relative flex flex-col min-h-screen"
  >
    <div
      class="sm:px-6 lg:px-8 bg-theme-background px-4"
    >
      <div
        class="md:h-24 flex items-center flex-shrink-0 h-20"
      >
        <div
          class="bg-logo flex p-2 rounded-lg"
        >
          <img
            alt="ARK Logo"
            class="md:h-8 lg:h-10 h-6"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class=" flex flex-col flex-1 space-y-5"
    >
      <div
        class="sc-fzoXzr imWwrn flex flex-col justify-center flex-1 text-center"
      >
        <div
          class="px-14 container py-16 mx-auto"
        >
          <div
            class="md:max-w-xl max-w-lg mx-auto"
          >
            <h1
              class="md:text-4xl mb-0"
            >
              Create Profile
            </h1>
            <div
              class="text-theme-neutral-dark"
            >
              Create a new Profile or login with your MarketSquare account to get started.
            </div>
            <div
              class="pb-4 mt-8"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxhCb VoPpj"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
            </div>
            <div
              class="sc-AxirZ jjvtQn border-theme-neutral-300"
              type="horizontal"
            />
            <form
              class="mt-4"
              data-testid="CreateProfile__form"
            >
              <div
                class=""
              >
                <ul
                  class="sc-fzpjYC eNSRJG"
                  data-testid="list-divided__items"
                >
                  <li
                    class=" flex flex-col w-full"
                    data-testid="list-divided-item__wrapper"
                  >
                    <div
                      class="flex flex-col items-start justify-between"
                      data-testid="list-divided-item__inner-wrapper"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="mr-5 text-2xl font-semibold"
                          data-testid="list-divided-item__label"
                        >
                          New Profile
                        </span>
                        <span
                          class="text-theme-neutral-dark my-1 text-sm"
                          data-testid="list-divided-item__label--description"
                        >
                          Select Profile Image
                        </span>
                      </div>
                    </div>
                    <div
                      class=""
                      data-testid="list-divided-item__content"
                    >
                      <div
                        class="flex flex-row mt-4 mb-8"
                      >
                        <div
                          class="border-theme-neutral-300 flex items-center justify-center w-24 h-24 mr-6 border-2 border-dashed rounded"
                        >
                          <button
                            class="bg-theme-primary-contrast flex items-center justify-center w-20 h-20 rounded-full"
                            type="button"
                          >
                            <div
                              class="sc-AxhCb fxrKLH"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                upload.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                        <div
                          class="bg-theme-neutral-light relative w-24 h-24 rounded"
                        >
                          <img
                            alt="random avatar"
                            class="object-cover rounded"
                            src="https://randomuser.me/api/portraits/men/3.jpg"
                          />
                          <button
                            class="bg-theme-danger-contrast text-theme-danger -top-3 -right-3 absolute flex items-center justify-center w-6 h-6 p-1 rounded"
                          >
                            <div
                              class="sc-AxhCb koOqYD"
                              height="12"
                              width="12"
                            >
                              <svg>
                                close.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
                <div
                  class="relative space-y-8"
                >
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="FormLabel text-theme-neutral-dark flex inline-block mb-2 text-sm font-medium transition-colors duration-100"
                      data-testid="FormLabel"
                      for="name"
                      label="Name"
                    >
                      Name
                    </label>
                    <input
                      class="sc-AxhUy fUOsTo bg-theme-background border-theme-neutral-300 text-theme-neutral-900  w-full px-4 py-3 overflow-hidden transition-colors duration-200 border rounded appearance-none"
                      data-testid="Input"
                      name="name"
                    />
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="FormLabel text-theme-neutral-dark flex inline-block mb-2 text-sm font-medium transition-colors duration-100"
                      data-testid="FormLabel"
                      for="marketProvider"
                      label="Market Provider"
                    >
                      Market Provider
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy fUOsTo bg-theme-background border-theme-neutral-300 text-theme-neutral-900 w-full px-4 py-3 overflow-hidden transition-colors duration-200 border rounded appearance-none sr-only"
                        data-testid="select-list__input"
                        name="marketProvider"
                        readonly=""
                        type="text"
                        value=""
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-0-label downshift-0-toggle-button"
                            class="sc-fznxsB kYIChF "
                            data-testid="select-list__toggle-button"
                            id="downshift-0-toggle-button"
                            type="button"
                          >
                            Select Market Provider
                          </button>
                          <ul
                            aria-labelledby="downshift-0-label"
                            class="sc-fznJRM VojIb"
                            id="downshift-0-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO text-theme-neutral w-10 pointer-events-none"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="FormLabel text-theme-neutral-dark flex inline-block mb-2 text-sm font-medium transition-colors duration-100"
                      data-testid="FormLabel"
                      for="currency"
                      label="Currency"
                    >
                      Currency
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy fUOsTo bg-theme-background border-theme-neutral-300 text-theme-neutral-900 w-full px-4 py-3 overflow-hidden transition-colors duration-200 border rounded appearance-none sr-only"
                        data-testid="select-list__input"
                        name="currency"
                        readonly=""
                        type="text"
                        value=""
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-1-label downshift-1-toggle-button"
                            class="sc-fznxsB kYIChF "
                            data-testid="select-list__toggle-button"
                            id="downshift-1-toggle-button"
                            type="button"
                          >
                            Select Currency
                          </button>
                          <ul
                            aria-labelledby="downshift-1-label"
                            class="sc-fznJRM VojIb"
                            id="downshift-1-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO text-theme-neutral w-10 pointer-events-none"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="mt-8"
                >
                  <ul
                    class="sc-fzpjYC eNSRJG"
                    data-testid="list-divided__items"
                  >
                    <li
                      class=" flex flex-col w-full"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex flex-col items-start justify-between"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col"
                        >
                          <span
                            class="text-theme-neutral-dark mr-5 text-xl font-bold"
                            data-testid="list-divided-item__label"
                          >
                            Dark Theme
                          </span>
                        </div>
                      </div>
                      <div
                        class=""
                        data-testid="list-divided-item__content"
                      >
                        <div
                          class="flex flex-row items-center justify-between"
                        >
                          <span
                            class="text-theme-neutral-dark mt-2 text-sm"
                          >
                            Want to set the wallet to dark mode?
                          </span>
                          <div
                            class="-mt-8"
                          >
                            <label
                              class="flex"
                            >
                              <input
                                class="sc-fznWqX iacyMP"
                                name="isDarkMode"
                                type="checkbox"
                              />
                              <div
                                class="sc-fzoiQi eGdcKs"
                              >
                                <span
                                  class="sc-fzqARJ hZWoJI"
                                />
                              </div>
                            </label>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="sc-AxirZ jJscrd border-theme-neutral-300"
                  type="horizontal"
                />
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="sc-AxjAm ddJBbC"
                  color="primary"
                  type="button"
                >
                  Back
                </button>
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  data-testid="CreateProfile__submit-button"
                  type="submit"
                >
                  Complete
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreateProfile should store profile 1`] = `
<DocumentFragment>
  <div
    class="bg-theme-neutral-contrast relative flex flex-col min-h-screen"
  >
    <div
      class="sm:px-6 lg:px-8 bg-theme-background px-4"
    >
      <div
        class="md:h-24 flex items-center flex-shrink-0 h-20"
      >
        <div
          class="bg-logo flex p-2 rounded-lg"
        >
          <img
            alt="ARK Logo"
            class="md:h-8 lg:h-10 h-6"
            src="ark-logo.png"
          />
        </div>
      </div>
    </div>
    <div
      class=" flex flex-col flex-1 space-y-5"
    >
      <div
        class="sc-fzoXzr imWwrn flex flex-col justify-center flex-1 text-center"
      >
        <div
          class="px-14 container py-16 mx-auto"
        >
          <div
            class="md:max-w-xl max-w-lg mx-auto"
          >
            <h1
              class="md:text-4xl mb-0"
            >
              Create Profile
            </h1>
            <div
              class="text-theme-neutral-dark"
            >
              Create a new Profile or login with your MarketSquare account to get started.
            </div>
            <div
              class="pb-4 mt-8"
            >
              <button
                class="sc-AxjAm ddQVWI w-full"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxhCb VoPpj"
                  height="20"
                  width="20"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
                <span
                  class="ml-2"
                >
                  Login with MarketSquare
                </span>
              </button>
            </div>
            <div
              class="sc-AxirZ jjvtQn border-theme-neutral-300"
              type="horizontal"
            />
            <form
              class="mt-4"
              data-testid="CreateProfile__form"
            >
              <div
                class=""
              >
                <ul
                  class="sc-fzpjYC eNSRJG"
                  data-testid="list-divided__items"
                >
                  <li
                    class=" flex flex-col w-full"
                    data-testid="list-divided-item__wrapper"
                  >
                    <div
                      class="flex flex-col items-start justify-between"
                      data-testid="list-divided-item__inner-wrapper"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="mr-5 text-2xl font-semibold"
                          data-testid="list-divided-item__label"
                        >
                          New Profile
                        </span>
                        <span
                          class="text-theme-neutral-dark my-1 text-sm"
                          data-testid="list-divided-item__label--description"
                        >
                          Select Profile Image
                        </span>
                      </div>
                    </div>
                    <div
                      class=""
                      data-testid="list-divided-item__content"
                    >
                      <div
                        class="flex flex-row mt-4 mb-8"
                      >
                        <div
                          class="border-theme-neutral-300 flex items-center justify-center w-24 h-24 mr-6 border-2 border-dashed rounded"
                        >
                          <button
                            class="bg-theme-primary-contrast flex items-center justify-center w-20 h-20 rounded-full"
                            type="button"
                          >
                            <div
                              class="sc-AxhCb fxrKLH"
                              height="1em"
                              width="1em"
                            >
                              <svg>
                                upload.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                        <div
                          class="bg-theme-neutral-light relative w-24 h-24 rounded"
                        >
                          <img
                            alt="random avatar"
                            class="object-cover rounded"
                            src="https://randomuser.me/api/portraits/men/3.jpg"
                          />
                          <button
                            class="bg-theme-danger-contrast text-theme-danger -top-3 -right-3 absolute flex items-center justify-center w-6 h-6 p-1 rounded"
                          >
                            <div
                              class="sc-AxhCb koOqYD"
                              height="12"
                              width="12"
                            >
                              <svg>
                                close.svg
                              </svg>
                            </div>
                          </button>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
                <div
                  class="relative space-y-8"
                >
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="FormLabel text-theme-neutral-dark flex inline-block mb-2 text-sm font-medium transition-colors duration-100"
                      data-testid="FormLabel"
                      for="name"
                      label="Name"
                    >
                      Name
                    </label>
                    <input
                      class="sc-AxhUy fUOsTo bg-theme-background border-theme-neutral-300 text-theme-neutral-900  w-full px-4 py-3 overflow-hidden transition-colors duration-200 border rounded appearance-none"
                      data-testid="Input"
                      name="name"
                    />
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="FormLabel text-theme-neutral-dark flex inline-block mb-2 text-sm font-medium transition-colors duration-100"
                      data-testid="FormLabel"
                      for="marketProvider"
                      label="Market Provider"
                    >
                      Market Provider
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy fUOsTo bg-theme-background border-theme-neutral-300 text-theme-neutral-900 w-full px-4 py-3 overflow-hidden transition-colors duration-200 border rounded appearance-none sr-only"
                        data-testid="select-list__input"
                        name="marketProvider"
                        readonly=""
                        type="text"
                        value="option1"
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-2-label downshift-2-toggle-button"
                            class="sc-fznxsB kYIChF is-selected "
                            data-testid="select-list__toggle-button"
                            id="downshift-2-toggle-button"
                            type="button"
                          >
                            Option 1
                          </button>
                          <ul
                            aria-labelledby="downshift-2-label"
                            class="sc-fznJRM VojIb"
                            id="downshift-2-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO text-theme-neutral w-10 pointer-events-none"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                  <fieldset
                    class="sc-AxiKw iQzisX flex flex-col space-y-2"
                  >
                    <label
                      class="FormLabel text-theme-neutral-dark flex inline-block mb-2 text-sm font-medium transition-colors duration-100"
                      data-testid="FormLabel"
                      for="currency"
                      label="Currency"
                    >
                      Currency
                    </label>
                    <div
                      class="relative w-full"
                    >
                      <input
                        class="sc-AxhUy fUOsTo bg-theme-background border-theme-neutral-300 text-theme-neutral-900 w-full px-4 py-3 overflow-hidden transition-colors duration-200 border rounded appearance-none sr-only"
                        data-testid="select-list__input"
                        name="currency"
                        readonly=""
                        type="text"
                        value="option1"
                      />
                      <div
                        class="relative w-full cursor-pointer"
                      >
                        <div>
                          <button
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-labelledby="downshift-3-label downshift-3-toggle-button"
                            class="sc-fznxsB kYIChF is-selected "
                            data-testid="select-list__toggle-button"
                            id="downshift-3-toggle-button"
                            type="button"
                          >
                            Option 1
                          </button>
                          <ul
                            aria-labelledby="downshift-3-label"
                            class="sc-fznJRM VojIb"
                            id="downshift-3-menu"
                            role="listbox"
                            tabindex="-1"
                          />
                        </div>
                        <div
                          class="sc-AxgMl sc-Axmtr hWILTO text-theme-neutral w-10 pointer-events-none"
                        >
                          <div
                            class="sc-AxhCb dxfUlj"
                            height="8"
                            width="8"
                          >
                            <svg>
                              arrowdown.svg
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </fieldset>
                </div>
                <div
                  class="mt-8"
                >
                  <ul
                    class="sc-fzpjYC eNSRJG"
                    data-testid="list-divided__items"
                  >
                    <li
                      class=" flex flex-col w-full"
                      data-testid="list-divided-item__wrapper"
                    >
                      <div
                        class="flex flex-col items-start justify-between"
                        data-testid="list-divided-item__inner-wrapper"
                      >
                        <div
                          class="flex flex-col"
                        >
                          <span
                            class="text-theme-neutral-dark mr-5 text-xl font-bold"
                            data-testid="list-divided-item__label"
                          >
                            Dark Theme
                          </span>
                        </div>
                      </div>
                      <div
                        class=""
                        data-testid="list-divided-item__content"
                      >
                        <div
                          class="flex flex-row items-center justify-between"
                        >
                          <span
                            class="text-theme-neutral-dark mt-2 text-sm"
                          >
                            Want to set the wallet to dark mode?
                          </span>
                          <div
                            class="-mt-8"
                          >
                            <label
                              class="flex"
                            >
                              <input
                                class="sc-fznWqX iacyMP"
                                name="isDarkMode"
                                type="checkbox"
                              />
                              <div
                                class="sc-fzoiQi eGdcKs"
                              >
                                <span
                                  class="sc-fzqARJ hZWoJI"
                                />
                              </div>
                            </label>
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="sc-AxirZ jJscrd border-theme-neutral-300"
                  type="horizontal"
                />
              </div>
              <div
                class="flex justify-end mt-8 space-x-3"
              >
                <button
                  class="sc-AxjAm ddJBbC"
                  color="primary"
                  type="button"
                >
                  Back
                </button>
                <button
                  class="sc-AxjAm ddQVWI"
                  color="primary"
                  data-testid="CreateProfile__submit-button"
                  type="submit"
                >
                  Complete
                </button>
              </div>
            </form>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
